--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
-title: Not Pure Poole
-description: A simple, beautiful, and powerful Jekyll theme for blogs
-url: https://vszhub.github.io
+title: Sirom's Todo List
+description: Simple is the Best
+url: https://wngus9056.github.io
 avatar: /avatar.jpeg
 paginate: 5
 permalink: pretty
